--- a/Android/app/src/main/res/layout/item_form_write_delivery.xml
+++ b/Android/app/src/main/res/layout/item_form_write_delivery.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:background="@drawable/stroke_gray_angle"
+    android:background="@android:color/white"
     android:layout_marginBottom="8dp"
     tools:ignore="ExtraText">
 
