--- a/Android/app/src/main/res/layout/fragment_form_follow.xml
+++ b/Android/app/src/main/res/layout/fragment_form_follow.xml
@@ -6,65 +6,60 @@
     <data>
     </data>
 
-    <!--폼 최신 틀-->
-    <com.google.android.material.appbar.AppBarLayout
+    <!-- ConstraintLayout으로 전체 레이아웃 감싸기 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
+        <!-- AppBarLayout containing Toolbar and TabLayout -->
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#CEDDFE"
-            app:contentInsetStart="0dp">
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="화함"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/nanum_square_eb" />
-        </androidx.appcompat.widget.Toolbar>
+                android:background="#CEDDFE"
+                app:contentInsetStart="0dp">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/formTabLayout"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="화함"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/nanum_square_eb" />
+            </androidx.appcompat.widget.Toolbar>
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/formTabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#CEDDFE"
+                app:tabGravity="fill"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/black"
+                app:tabTextColor="@android:color/darker_gray" />
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <!-- RecyclerView displaying form items -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/formRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#CEDDFE"
-            app:tabGravity="fill"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/black"
-            app:tabTextColor="@android:color/darker_gray">
+            android:layout_height="0dp"
+            android:padding="8dp"
+            android:clipToPadding="false"
+            app:layout_constraintTop_toBottomOf="@id/formTabLayout"
+            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            tools:ignore="NotSibling" />
 
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/tab_latest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="최신" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/tab_following"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="팔로잉" />
-        </com.google.android.material.tabs.TabLayout>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/formRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="8dp"
-        android:clipToPadding="false"
-        app:layout_constraintTop_toBottomOf="@+id/formTabLayout"
-        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
-        tools:ignore="NotSibling" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
