--- a/Android/app/src/main/res/layout/item_form_info.xml
+++ b/Android/app/src/main/res/layout/item_form_info.xml
@@ -1,10 +1,19 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.example.cosmetictogether.presentation.form.viewmodel.FormDetailViewModel" />
+        <variable
+            name="form"
+            type="com.example.cosmetictogether.data.model.DetailFormResponse" />
+    </data>
+
     <TextView
         android:id="@+id/productDescriptionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="상품 설명 내용이 여기에 표시됩니다."
+        android:text="@{form.formDescription}"
         android:textSize="16sp" />
 </layout>
