--- a/Android/app/src/main/res/layout/item_form_write_delivery.xml
+++ b/Android/app/src/main/res/layout/item_form_write_delivery.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,7 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="배송 방법"
+        android:text="일반 택배"
         android:textSize="14sp"
         android:textStyle="bold"
         android:layout_marginEnd="8dp" />
@@ -23,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="배송비"
+        android:text="2500원"
         android:textSize="14sp"
         android:layout_marginEnd="8dp" />
 
