--- a/Android/app/src/main/res/layout/item_form_header.xml
+++ b/Android/app/src/main/res/layout/item_form_header.xml
@@ -1,43 +1,79 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.example.cosmetictogether.presentation.form.viewmodel.FormDetailViewModel" />
+        <variable
+            name="form"
+            type="com.example.cosmetictogether.data.model.DetailFormResponse" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/formLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp"
+            app:layout_constraintBaseline_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
+                app:imageUrl="@{form.thumbnail}"
+                android:layout_gravity="center"
+                android:layout_marginBottom="5dp"/>
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{form.title}"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="5dp"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="8dp"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/formLinearLayout">
 
             <ImageView
-                android:id="@+id/productImage"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:id="@+id/organizer_url"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginEnd="8dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/baseline_account_box_24" />
+                app:imageUrl="@{form.organizerProfileUrl}" />
 
             <TextView
-                android:id="@+id/productTitleTextView"
+                android:id="@+id/organizerName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="상품명"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:gravity="center_vertical" />
+                android:gravity="center_vertical"
+                android:text="@{form.organizerName}"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/followButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="팔로우"
+                android:layout_marginStart="8dp"
                 android:backgroundTint="#CEDDFE"
-                android:textColor="#FFFFFF"
-                android:layout_marginStart="8dp" />
+                android:text="팔로우"
+                android:textColor="#FFFFFF" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
