--- a/Android/app/src/main/res/layout/item_form_header.xml
+++ b/Android/app/src/main/res/layout/item_form_header.xml
@@ -35,13 +35,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{form.title}"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="5dp"/>
 
         </LinearLayout>
 
+        <!-- 판매 기간 -->
         <LinearLayout
+            android:id="@+id/salesPeriodLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -49,31 +51,87 @@
             app:layout_constraintTop_toBottomOf="@+id/formLinearLayout">
 
             <ImageView
+                android:id="@+id/salesPeriodIcon"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/baseline_calendar_month_24" />
+
+            <TextView
+                android:id="@+id/salesPeriodText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@{form.salesPeriod}"
+                android:textColor="#000000"
+                android:layout_gravity="center"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <!-- Organizer 정보 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/salesPeriodLayout">
+
+            <!-- 프로필 사진 -->
+
+            <!-- 닉네임 및 버튼 -->
+            <ImageView
                 android:id="@+id/organizer_url"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="8dp"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{form.organizerProfileUrl}" />
+                app:imageUrl="@{form.organizerProfileUrl}"
+                android:layout_gravity="center"/>
 
-            <TextView
-                android:id="@+id/organizerName"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:text="@{form.organizerName}"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/followButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="#CEDDFE"
-                android:text="팔로우"
-                android:textColor="#FFFFFF" />
+                <!-- 닉네임 -->
+                <TextView
+                    android:id="@+id/organizerName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="@{form.organizerName}"
+                    android:layout_marginBottom="7sp"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <!-- 버튼 그룹 -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="4dp">
+
+                    <Button
+                        android:id="@+id/messageButton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="8dp"
+                        android:background="@drawable/stroke_sky_full_angle"
+                        android:text="메시지"
+                        android:textColor="#FFFFFF" />
+
+                    <Button
+                        android:id="@+id/followButton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/stroke_sky_angle"
+                        android:text="팔로우"
+                        android:textColor="@color/black" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
