--- a/Android/app/src/main/res/layout/item_form_delivery.xml
+++ b/Android/app/src/main/res/layout/item_form_delivery.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical">
 
         <RadioGroup
+            android:id="@+id/deliveryRadioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
